--- a/.github/workflows/react-surge.yaml
+++ b/.github/workflows/react-surge.yaml
@@ -1,29 +1,19 @@
-# This is a basic workflow to help you get started with Actions
 
-name: React State
+name: Deploy Website
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: React state to surge
+    name: Deploying to surge
     steps:
       - uses: actions/checkout@v2
       - name: Install Node.js
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - name: Prepare for yarn Installation
+      - name: Prepare for Yarn Installation
         run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
       - name: install yarn
         run: sudo apt update && sudo apt install yarn
@@ -31,5 +21,6 @@ jobs:
         run: yarn build
       - name: Install Surge
         run: npm install -g surge
-      - name: Run Surge
-        run: surge ./build react-state1_mahnoor.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      - name: Run surge
+        run: surge ./build react_state_mahnoor.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+
